opam-version: "1.2"

version: "0.1.1"
maintainer: "steenuil.owl@gmail.com"
authors: ["steenuil"]
license: ["MIT"]

homepage: "https://github.com/steinuil/nene"
bug-reports: "https://github.com/steinuil/nene/issues"
dev-repo: "https://github.com/steinuil/nene"

build: ["dune" "build" "-p" name "-j" jobs]
install: ["dune" "install" "-p" name]
remove: ["dune" "uninstall" "-p" name]

depends: [
  "ocamlfind" {build}
  "dune" {build & >= "1.0"}
  "cohttp-lwt-unix"
  "sexplib"
  "xml-light"
  "yojson"
]
